--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -88,7 +88,7 @@
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1">
                     <div class="portfolio-thumb">
-                        <a class="image-popup-no-margins" href="{{site.url}}/assets/img/case.jpg"><img class="img-responsive" src="{{site.url}}/assets/img/case.jpg"></a>
+                        <a class="image-popup-no-margins" href="{{site.url}}/assets/img/CASE.jpg"><img class="img-responsive" src="{{site.url}}/assets/img/CASE.jpg"></a>
                         <p class="description"><b>Phone Case</b>&nbsp;&nbsp; A beautifully printed phone case to add a fabulously cool touch to your favorite piece of technology!</p>
                     </div>
                     <div class="portfolio-thumb pull-right">
