--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -62,11 +62,11 @@
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1">
                     <div class="portfolio-thumb">
-                        <a class="image-popup-no-margins" href="{{site.url}}/assets/img/kmb.jpg"><img class="img-responsive" src="{{site.url}}/assets/img/kmb.jpg"></a>
+                        <a class="image-popup-no-margins" href="{{site.url}}/assets/img/KMB.jpg"><img class="img-responsive" src="{{site.url}}/assets/img/KMB.jpg"></a>
                         <p class="description"><b>Event Branding</b>&nbsp;&nbsp; A design to represent an event or exhibition. Easily being implemented into a corporate&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; t-shirt or other merchandises. </p>
                     </div>
                     <div class="portfolio-thumb pull-right">
-                        <a class="image-popup-no-margins" href="{{site.url}}/assets/img/come.jpg"><img class="img-responsive" src="{{site.url}}/assets/img/come.jpg"></a>
+                        <a class="image-popup-no-margins" href="{{site.url}}/assets/img/COME.jpg"><img class="img-responsive" src="{{site.url}}/assets/img/COME.jpg"></a>
                         <p class="description"><b>Event Branding</b>&nbsp;&nbsp; A design to represent an event or exhibition. Easily being implemented into a corporate&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; t-shirt or other merchandises. </p>
                     </div>
                 </div>
