--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,4 +1,4 @@
-    <section class="illustration" id="page-top">
+    <section class="illustration img-responsive" id="page-top">
         <img src="{{site.url}}/assets/img/q.jpg" >
 
     </section>
