--- a/assets/css/freelancer.css
+++ b/assets/css/freelancer.css
@@ -159,7 +159,7 @@ section h2 {
 section.illustration {
   /*padding-top: 200px;*/
   background: #e5e5db;
-  height: auto; 
+  height: 668px; 
 }
 section.success {
   background: #93b8b1;
