--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,5 +1,5 @@
-    <section class="illustration img-responsive" id="page-top">
-        <img class="img-responsive" src="{{site.url}}/assets/img/q.jpg" >
+    <section class="illustration" id="page-top">
+        <img src="{{site.url}}/assets/img/q.jpg" >
 
     </section>
 
