--- a/_includes/about.html
+++ b/_includes/about.html
@@ -26,7 +26,7 @@
               <div id="console">
                 <p>Hello, I'm Aisyah and thank you for visiting!<br><br>
                   Originally from Seremban, living in Kuala Lumpur. I create stuff. 
-                  I am driven by a passion for colour, pattern, and minimalism to produce work that is bold, playful and specific. I am currently doing freelance works, feel free to <a target="_blank" href="{{site.url}}/assets/img/resume-graphic-design-website.pdf">look at my resume</a>, my works at <a target="_blank" href="https://www.instagram.com/amberandsparkles/">Amber & Sparkles</a> and <a target="_blank" href="https://www.instagram.com/thepixelthings/">The Pixel Things</a><br><br><br>
+                  I am driven by a passion for colour, pattern, and minimalism to produce work that is bold, playful and specific. I am currently doing freelance works, feel free to <a target="_blank" href="{{site.url}}/assets/img/resume-graphic-design-aug2017-disclose.pdf">look at my resume</a>, my works at <a target="_blank" href="https://www.instagram.com/amberandsparkles/">Amber & Sparkles</a> and <a target="_blank" href="https://www.instagram.com/thepixelthings/">The Pixel Things</a><br><br><br>
 
                   <i>Favorite movie:</i> <p class="answer">Dazed and Confused, Juno</p><br>
                   <i>Celebrity crush:</i> <p class="answer">Benedict Cumberbatch</p><br>
@@ -45,7 +45,7 @@
 
                   <br><br>
                   If you have a work for me or just want to say hello, please do get in touch via email! <br><br><br>
-                  &#x276f; <a target="_blank" href="https://www.instagram.com/quirkysovl/">@quirkysovl</a><br>
+                  &#x276f; <a target="_blank" href="https://www.instagram.com/aisyahaway/">@aisyahaway</a><br>
                   &#x276f; <a target="_blank" href="https://twitter.com/aisyahhanifiah">@aisyahhanifiah</a><br>
                   &#x276f; <a target="_blank" href="http://amelienation.tumblr.com/">amelienation.tumblr.com</a><br>
                   &#x276f; <a target="_blank" href="mailto:aisyahhanifiah@live.com">aisyahhanifiah@live.com</a><br>
