--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
 
                     <span class="pull-right">
                         <a target="_blank" href="mailto:aisyahhanifiah@live.com">Email</a>&nbsp;//&nbsp;
-                        <a target="_blank" href="https://www.instagram.com/quirkysovl/">Instagram</a>&nbsp;//&nbsp;
+                        <a target="_blank" href="https://www.instagram.com/aisyahaway/">Instagram</a>&nbsp;//&nbsp;
                         <a target="_blank" href="https://twitter.com/aisyahhanifiah">Twitter</a>
                     </span>
                 </div>
