--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,12 @@
 <!doctype html>
 <head>
+	<meta name="twitter:card" content="summary" />
+<meta name="twitter:site" content="@aisyahhanifiah" />
+<meta name="twitter:title" content="Aisyah Hanifiah" />
+<meta name="twitter:description" content="I am driven by a passion for colour, pattern, and minimalism to produce work that is bold, playful and specific." />
+<meta name="twitter:image" content="http://www.aisyahhanifiah.com/assets/img/q.jpg" />
+	
+	
 	<!-- <meta charset="<?php bloginfo('charset'); ?>" /> -->
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
