--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 <meta name="twitter:site" content="@aisyahhanifiah" />
 <meta name="twitter:title" content="Aisyah Hanifiah" />
 <meta name="twitter:description" content="I am driven by a passion for colour, pattern, and minimalism to produce work that is bold, playful and specific." />
-<meta name="twitter:image" content="http://www.aisyahhanifiah.com/assets/img/q.jpg" />
+<meta name="twitter:image" content="http://www.aisyahhanifiah.com/assets/img/logofolio5.jpg" />
 	
 	
 	<!-- <meta charset="<?php bloginfo('charset'); ?>" /> -->
