--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -6,6 +6,32 @@
                     <p>Work + Fun</p>
                 </div>
             </div>
+            
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1">
+                    <div class="portfolio-thumb">
+                        <a class="image-popup-no-margins" target="_blank" href="{{site.url}}/assets/img/wedding-card-25.jpg"><img class="img-responsive" src="{{site.url}}/assets/img/wedding-card-25.jpg"></a>
+                        <p class="description"><b>Wedding Invitations</b>&nbsp;&nbsp; Impress your wedding guests with this gorgeous & professionally designed wedding invitation featuring a stunning combination of a calligraphy font and floral design.</p>
+                    </div>
+                    <div class="portfolio-thumb pull-right">
+                        <a class="image-popup-no-margins" target="_blank" href="{{site.url}}/assets/img/wedding-card-21.jpg"><img class="img-responsive" src="{{site.url}}/assets/img/wedding-card-21.jpg"></a>
+                        <p class="description"><b>Wedding Invitations</b>&nbsp;&nbsp; Impress your wedding guests with this gorgeous & professionally designed wedding invitation featuring a stunning combination of a sans serif font and floral design.</p>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1">
+                    <div class="portfolio-thumb">
+                        <a class="image-popup-no-margins" target="_blank" href="{{site.url}}/assets/img/wedding-card-12.jpg"><img class="img-responsive" src="{{site.url}}/assets/img/wedding-card-12.jpg"></a>
+                        <p class="description"><b>Wedding Invitations</b>&nbsp;&nbsp; Impress your wedding guests with this gorgeous & professionally designed wedding invitation featuring a stunning combination of a calligraphy font and floral design.</p>
+                    </div>
+                    <div class="portfolio-thumb pull-right">
+                        <a class="image-popup-no-margins" target="_blank" href="{{site.url}}/assets/img/wedding-card-10.jpg"><img class="img-responsive" src="{{site.url}}/assets/img/wedding-card-10.jpg"></a>
+                        <p class="description"><b>Wedding Invitations</b>&nbsp;&nbsp; Impress your wedding guests with this gorgeous & professionally designed wedding invitation featuring a stunning combination of a sans serif font and moroccan design.</p>
+                    </div>
+                </div>
+            </div>
 
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1">
