--- a/_includes/about.html
+++ b/_includes/about.html
@@ -29,7 +29,7 @@
                   I am driven by a passion for colour, pattern, and minimalism to produce work that is bold, playful and specific. I am currently doing freelance works, feel free to <a target="_blank" href="{{site.url}}/assets/img/resume-2018-website.pdf">look at my resume</a>, my works at <a target="_blank" href="https://www.instagram.com/amberandsparkles/">Amber & Sparkles</a> and <a target="_blank" href="https://www.instagram.com/thepixelthings/">The Pixel Things</a><br><br><br>
 
                   <i>Favorite movie:</i> <p class="answer">Dazed and Confused, Juno</p><br>
-                  <i>Celebrity crush:</i> <p class="answer">Benedict Cumberbatch</p><br>
+                  <i>Celebrity crush:</i> <p class="answer">Brendon Urie</p><br>
                   <i>Guilty pleasure:</i> <p class="answer">White Chicks</p><br>
                   <i>Dream:</i> <p class="answer">Own a house by the sea and spend most of my time traveling</p><br>
                   <i>Interest:</i> <p class="answer">Books, breakfast, coffee, spotify, movies, code</p><br><br>
