--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ Tags: bootstrap
   text-transform: uppercase;
   font-size: 16px;
   text-decoration: none;
-  font-weight: normal;
+  font-weight: bold;
   color: #000;
   margin-left: 0;
 }
