--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -51,7 +51,18 @@
                 </div>
             </div>
 
-
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1">
+                    <div class="portfolio-thumb">
+                        <a class="image-popup-no-margins" target="_blank" href="{{site.url}}/assets/img/misc-compilation-feed-43.jpg"><img class="img-responsive" src="{{site.url}}/assets/img/misc-compilation-feed-43.jpg"></a>
+                        <p class="description"><b>Advanced Infographic Design</b>&nbsp;&nbsp; I designed a relation diagram for character occurrences in LOTR+Hobbit trilogies. Hit me up to see full PDF!</p>
+                    </div>
+                    <div class="portfolio-thumb pull-right">
+                        <a class="image-popup-no-margins" target="_blank" href="{{site.url}}/assets/img/misc-compilation-feed-45.jpg"><img class="img-responsive" src="{{site.url}}/assets/img/misc-compilation-feed-45.jpg"></a>
+                        <p class="description"><b>Booklet Design</b>&nbsp;&nbsp; A mini booklet design for my design portfolio. Hit me up to see full PDF!</p>
+                    </div>
+                </div>
+            </div>
 
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1">
