--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -55,7 +55,7 @@
                 <div class="col-lg-10 col-lg-offset-1">
                     <div class="portfolio-thumb">
                         <a class="image-popup-no-margins" target="_blank" href="{{site.url}}/assets/img/misc-compilation-feed-43.jpg"><img class="img-responsive" src="{{site.url}}/assets/img/misc-compilation-feed-43.jpg"></a>
-                        <p class="description"><b>Advanced Infographic Design</b>&nbsp;&nbsp; I designed a relation diagram for character occurrences in LOTR+Hobbit trilogies. Hit me up to see full PDF!</p>
+                        <p class="description"><b>Advanced Infographic Design</b>&nbsp;&nbsp; I designed a relation diagram for character occurrences in LOTR+Hobbit trilogies when I was in University of Queensland. Became the top 10 infographic to be displayed at Queensland state gallery. Hit me up to see full PDF!</p>
                     </div>
                     <div class="portfolio-thumb pull-right">
                         <a class="image-popup-no-margins" target="_blank" href="{{site.url}}/assets/img/misc-compilation-feed-45.jpg"><img class="img-responsive" src="{{site.url}}/assets/img/misc-compilation-feed-45.jpg"></a>
