--- a/_includes/about.html
+++ b/_includes/about.html
@@ -25,8 +25,8 @@
 
               <div id="console">
                 <p>Hello, I'm Aisyah and thank you for visiting!<br><br>
-                  Originally from Seremban, living in Kuala Lumpur. I create stuff. 
-                  I am driven by a passion for colour, pattern, and minimalism to produce work that is bold, playful and specific. I am currently doing freelance works, feel free to <a target="_blank" href="{{site.url}}/assets/img/resume-2018-website.pdf">look at my resume</a>, my works at <a target="_blank" href="https://www.instagram.com/amberandsparkles/">Amber & Sparkles</a> and <a target="_blank" href="https://www.instagram.com/mokamelie/">Moka Melie</a><br><br><br>
+                  Originally from Seremban, residing in Selangor. I create stuff. 
+                  I am driven by a passion for colour, pattern, and minimalism to produce work that is bold, playful and specific. I am currently doing freelance works, feel free to browse my works at <a target="_blank" href="https://www.instagram.com/mokamelie/">Moka Melie</a><br><br><br>
 
                   <i>Favorite movie:</i> <p class="answer">Dazed and Confused, Juno</p><br>
                   <i>Celebrity crush:</i> <p class="answer">Brendon Urie</p><br>
